# schwinger_model

./: main.py  pyproject.toml
qclib/: lib.py  sim.py
