[project]
name = "schwinger_model"
version = "0.1.0"
authors = [
    { name = "Elliott Ashby", email = "ea1g21@soton.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "qiskit==1.2.4",
    "qiskit-aer>=0.15.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "tqdm>=4.66"
]

[project.scripts]
schwinger_model = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]
